[package]
name = "comments"
version = "0.1.0"
authors = ["Bytekeeper <bytekeeper@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgi = "^0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serde_urlencoded = "0.5.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
url = "2.1.1"
rand = "0.7"
base64 = "0.11.0"
hyper="0.13.1"

[[bin]]
name = "post"
path = "src/main.rs"