[package]
name = "comment_server"
version = "0.2.0"
authors = ["Bytekeeper <bytekeeper@mailbox.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rand = "0.8"
hyper = { version = "0.14", features = ["server"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.75"
octocrab = "0.31.2"
http-body = "0.4.5"
env_logger = "0.10.0"
log = "0.4.20"
tower = { version = "0.4.13", features = ["limit"] }
